fix(#268): Removes overflow auto and sets to inherit so selects in card can go over the div boundary

--- a/packages/hawtio/src/plugins/camel/CamelContent.css
+++ b/packages/hawtio/src/plugins/camel/CamelContent.css
@@ -1,5 +1,5 @@
 #camel-content-main > article {
-  overflow: auto;
+  overflow: inherit;
 }
 
 #camel-content-header > #camel-contexts-toolbar {
